# omniai

./: .gitignore  README.md  docker-compose.yml
Ai_model/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
Ai_model/core/: Pdf_Agent.py  __init__.py  chat_handler.py
Ai_model/core/proces/: file_process.py  search_engine.py
Ai_model/core/utils/: document_manager.py
Ai_model/middleware/: middleware.py
Ai_model/pb/: service.proto  service_pb2.py  service_pb2_grpc.py
Ai_model/routes/: pdf_routes.py
Ai_model/services/: grpc_func.py  producer.py  rabbitmq.py
Ai_model/utils/: ChainManager.py  api_key.py  file_utils.py  id_gen.py  pinecone.py  redis_config.py
api/: .air.toml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  grpc_server.go  main.go  sqlc.yaml
api/cmd/: main.go
api/config/: redis.go
api/controllers/: auth_controller.go  chat_contoller.go
api/database/: database.go  migrations.go
api/helper/: utills.go  utils.go
api/middleware/: auth.go
api/models/: document.go  qahistory.go  user.go
api/proto/: service.pb.go  service.proto  service_grpc.pb.go
api/routes/: pdfchat.go  users.go
api/services/: blukinstat.go
backend/: main.py  requirements.txt
backend/api/: Makefile  README.md  go.mod  go.sum  main.go
backend/config/: pinecone.py  redis_config.py
backend/core/: Pdf_Agent.py
backend/db/: db.py
backend/middleware/: auth_middleware.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json
nginx/: Dockerfile  README.md  nginx.conf
(+48 files in other folders)
